# asar_robot_control_packages

./: README.md
asar_control/: CMakeLists.txt  README.md  package.xml
asar_control/action/: FollowCartesianTarget.action  FollowJointTarget.action  SolveIK.action
asar_control/config/: DynVar.cfg  asar_single.rviz  controllers.yaml  joint_limits.yaml
asar_control/include/asar_control/: MotionPlanner.h  asar_control.h
asar_control/include/asar_planner/: asar_planner.h
asar_control/launch/: asar_control_main.launch  asar_control_single.launch
asar_control/src/: asar_control.cpp  asar_control_main.cpp  asar_gui.cpp  asar_planner.cpp
asar_control/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
asar_control/urdf/: asar_full_path.urdf  asar_v2.urdf  gen3_4dof_v4.urdf
asar_description/: CMakeLists.txt  README.md  package.xml
asar_description/meshes/: finger_left_link.STL  finger_right_link.STL  interface_link.STL  pitch_link.STL
asar_description/urdf/: asar_v2.urdf  asar_v2_ik_solver.urdf  asar_v2_revolute_7dof.urdf  asar_v2_revolute_triangulation.urdf
codcs_ik/: CMakeLists.txt  README.md  package.xml
codcs_ik/config/: example_description.yaml
codcs_ik/include/codcs_ik/: codcs_ik.hpp  ik_solver.hpp  solver_base.hpp  solver_options.hpp
codcs_ik/include/nlo/: nlo_ik.hpp
codcs_ik/include/nlo/interfaces/: nlo_casadi.hpp  nlo_nlopt.hpp
codcs_ik/include/tp/: tp_ik.hpp
codcs_ik/include/tp/interfaces/: tp_pinocchio.hpp
codcs_ik/launch/: codcs_benchmark.launch  codcs_example_constrained.launch
codcs_ik/src/: benchmark_test.cpp  codcs_ik.cpp
codcs_ik/urdf/: gen3_4dof_v4.urdf  smart_arm_r.urdf
forceps_control/: CMakeLists.txt  README.md  package.xml
forceps_control/config/: controller.yaml  controller_act1.yaml  controller_act2.yaml  joint_limits.yaml
forceps_control/include/forceps_control/: forceps_control.h  forceps_hw.h  forceps_status_code.h
forceps_control/launch/: forceps_control_asar.launch  forceps_control_dual_standalone.launch  forceps_control_standalone_0.launch  forceps_control_standalone_1.launch
forceps_control/src/: forceps_control.cpp  main.cpp
forceps_control/urdf/: forceps.urdf
gen3_control/: README.md
gen3_control/gen3_control/: CMakeLists.txt  package.xml
gen3_control/gen3_control/action/: FollowJointCmd.action
gen3_control/gen3_control/config/: DynVar.cfg  controller.yaml  joint_limits.yaml
gen3_control/gen3_control/include/gen3_control/: gen3_control.h  gen3_hw.h  gen3_status_code.h
gen3_control/gen3_control/include/gen3_planner/: MotionPlanner.h  gen3_planner.h
gen3_control/gen3_control/include/kortex_arm/: kortex_arm.h
gen3_control/gen3_control/launch/: gen3_control_asar.launch  gen3_control_standalone.launch
gen3_control/gen3_control/launch/gen3_control_dressing/: gen3_control_dressing_robot.launch  gen3_control_dressing_robot_force.launch  gen3_control_dressing_robot_force_ad.launch  gen3_control_dressing_robot_origin.launch
gen3_control/gen3_control/meshes/: 4dof_link1.STL  4dof_link2.STL  4dof_link3.STL
gen3_control/gen3_control/sim/: gen3.ttt
gen3_control/gen3_control/src/: gen3_control.cpp  gen3_example.cpp  gen3_gui.cpp  gen3_planner.cpp  main.cpp
gen3_control/gen3_control/src/qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gen3_control/gen3_control/urdf/: gen3.urdf
mc_daq_ros/: CMakeLists.txt  package.xml
mc_daq_ros/include/usb3104/: usb3104.h
mc_daq_ros/launch/: full_stream.launch  mc_daq_forceps.launch  mc_daq_haptic.launch  mc_daq_ros.launch
mc_daq_ros/src/: daqlib_sample.cpp  forceps_demo.cpp  haptic_main.cpp  usb1608_stream.cpp  usb3104_stream.cpp  usbquad08_stream.cpp
mc_daq_ros/src/usb1608/: usb1608.cpp
mc_daq_ros/src/usb3104/: usb3104.cpp
mc_daq_ros/src/usbquad08/: usbquad08.cpp
