<package>
  <name>asar_description</name>
  <version>2.2.2</version>
  <description>
    <p>URDF and xacro description package for ASAR robot</p>
    <p>This package contains configuration data, 3D models and launch files
for the ASAR (Autonomous Surgical Assistant Robot)</p>
  </description>
  <author email="colan@robo.mein.nagoya-u.ac.jp">Alexandre Vannobel</author>
  <maintainer email="colan@robo.mein.nagoya-u.ac.jp" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>xacro</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
